# virtio_dmabuf_tools

./: README.md
libvdmabuf/: Android.bp  CMakeLists.txt  libvdmabuf_test_consumer.c  libvdmabuf_test_producer.c  vdmabuf_api.h  vdmabuf_common.c  vdmabuf_common.h  vdmabuf_ioctl.c  vdmabuf_ioctl.h
vdmabuf_example/: Android.bp  CMakeLists.txt  test_vdmabuf_consumer.c  vdmabuf_ioctl.h
vdmabuf_manager/: Android.bp  CMakeLists.txt  client_test_consumer.c  client_test_producer.c  vdmabuf_client.c  vdmabuf_client.h  vdmabuf_common.c  vdmabuf_common.h  vdmabuf_ioctl.c  vdmabuf_ioctl.h  vdmabuf_manager.c  vdmabuf_protocal.h
vdmabuf_manager/vdmabuf_example/: CMakeLists.txt  test_vdmabuf_consumer.c  test_vdmabuf_producer.c  vdmabuf_ioctl.h
